# BigDL-core

bigdl-core-xe/: build.sh
bigdl-core-xe/ggml/: CMakeLists.txt  quantize.c  quantize.h
